give coins command and some fixes for unrelated things